# varfish-installer

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: automerge.yml  deps-report.yml  deps-report.yml~  main.yml  release-please.yml
src/: .gitignore  Makefile  Pipfile  pyproject.toml
src/tests/: conftest.py  test_config.py
src/tests/__snapshots__/: test_config.ambr
src/tests/config/: manifest-gnomad-exomes.txt
src/varfish_installer/: __main__.py  cmd_download.py  cmd_install.py  config.py
utils/docker/: Dockerfile  build-docker.sh  docker-entrypoint.sh
