[project]
name = "varfish-installer"
description = "helpers for installing VarFish"
version = "0.0.0"
authors = [
    { name = "Manuel Holtgrewe", email = "manuel.holtgrewe@bih-charite.de" }
]
dependencies = [
    "loguru",
    "typer",
]
requires-python = ">= 3.10"
license = {text = "MIT License"}

[project.scripts]
varfish-installer = "varfish_installer.__main__:app"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.isort]
force_sort_within_sections = true
profile = "black"

[tool.black]
line_length = 100
